@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Display of orientation markers
 * New configuration options:
   - "ShowInfoPanelAtStartup" to control the info panel at startup
   - "ShowUserPreferencesButton" to show the button for setting preferences
